# D-Guide

./: .env.example  .gitignore  LICENSE  README.md  requirements.txt
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: HOLO-DWA.md  SITL.md  architecture.md  installation.md
docs/images/: README.md
ros_ws/: bringup.sh  voice.sh
ros_ws/scripts/: flight_test.py  waypoints_cli.py
ros_ws/src/interfaces/: CMakeLists.txt  package.xml
ros_ws/src/interfaces/action/: FollowPP.action
ros_ws/src/interfaces/srv/: GetWaypoints.srv
ros_ws/src/mission_manager/: package.xml  setup.py
ros_ws/src/mission_manager/mission_manager/: control_node.py  followpp_server.py
ros_ws/src/obstacle_avoidance/: package.xml  setup.py
ros_ws/src/obstacle_avoidance/obstacle_avoidance/: dwa_core.py  dwa_navigator.py
ros_ws/src/path_planning/: package.xml  setup.py
ros_ws/src/path_planning/path_planning/: pp_node.py
ros_ws/src/voice_mod/: package.xml  setup.cfg  setup.py
ros_ws/src/voice_mod/models/: ww.ppn
ros_ws/src/voice_mod/resource/: api_key.json.example
ros_ws/src/voice_mod/voice_mod/: llm_node.py  stt_node.py  ww_node_service.py  ww_node_topic.py
