<?xml version="1.0"?>
<package format="3">
  <name>interfaces</name>
  <version>0.0.0</version>
  <description>Interfaces for D-Guide (actions + services)</description>
  <maintainer email="blar@example.com">Blar</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rosidl_default_generators</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
